# sugarj

./: .gitignore  .gitmodules  CNAME  README  README.md  copy-to-server.sh  first-steps.html  index.html  params.json  readme.txt  sugarjc.sh
case-studies/: .project
case-studies-mdd/base-model-test/: .project
case-studies-mdd/db-schema/: .project
case-studies-mdd/laterconf/: .classpath
case-studies/Foo/: .project
case-studies/assertions/: AssertionSugar.sugj  Test.sugj
case-studies/base-model-test/: base-model-test indirect.launch
case-studies/check/: Naming.sugj  test.sugj
case-studies/closures/: .project
case-studies/concretesyntax/: ConcreteJava.sugj  ConcreteStratego.sugj  EditorServices.sugj  Java.sugj  Stratego.sugj
case-studies/eblock/: ConcatIds.sugj  EBlock.sugj  Test.sugj
case-studies/editor/: Colors.sugj
case-studies/features/: Features.sugj
case-studies/fomega-type-annotations/: .project
case-studies/foo/: EditorServiceHelper.sugj  FooEditorServices.sugj  FooSugar.sugj  Plain.sugj  Test.sugj
case-studies/fosd/: features-mdd test.launch
case-studies/fosd-graphPL/: .project
case-studies/java-pet-store/: bp-project.xml  build.xml  index.html
case-studies/javaclosure/: Function.sugj  Syntax.sugj  Test.sugj  Transformation.sugj
case-studies/latex/: Bibtex.sugj  SpellChecking.sugj
case-studies/pair/: Pair.java  Pair.sugj  Sugar.sugj  Test.sugj
case-studies/questionnaire-language/: .project
case-studies/regex/: Regex.sugj  RegexAsString.sugj  Test.sugj
case-studies/statemachine/: .project  statemachine ATM Ref Test Recursive.launch  statemachine ATM Ref Test.launch  statemachine ATM Simu.launch  statemachine DataATM.launch  statemachine Entity Account.launch
case-studies/templates/: .project  test.uses.PersonEntity_ConstantBody.launch  test.uses.PersonEntity_ConstantTarget.launch
case-studies/test-circularity-mdd/: .project  test-circularity-mdd.launch
case-studies/test-fomega/: .project
case-studies/test-fomega-typechecker/: .project  compile.sh
case-studies/test-memory/: .project
case-studies/test-type-check-first/: .project
case-studies/text/: Latex.sugj  LatexLib.sugj
case-studies/type-smart-syntax/: .project
cli-script/: .gitignore  sugarj-dev  sugj  sugj-dev
common/: .classpath  build.properties  ehcache.xml
compiler/: .classpath  .project  MANIFEST.MF  build-transformations.sh  build.properties
deployment/: build-all.xml
deployment/cli-scripts/cabal/: Launch.hs  Paths_sugarhaskell.hs  Setup.hs  SugarHaskell.hs  SugarJ.hs  sugarhaskell.cabal
deployment/cli-scripts/sugarj/: SugarHaskell.hs  case-studies  sugarhaskell.cabal
editor/: .classpath  .project  build.generated.xml  build.main.xml  index.html  plugin.xml
feature/: .project  feature.xml
feature-base/: .project  feature.xml
feature-haskell/: .project  feature.xml
feature-java/: .project  build-feature.xml  feature.xml
feature-prolog/: .project  build-feature.xml  feature.xml
fomega/: index.html  soundext.rkt
haskelllib/: .project  plugin.xml
javalib/: build.properties
jpromo/: index.html
languagelib/: .project
org.strategoxt.imp.nativebundle/: README
org.sugarj.common/: .project
prologlib/: build.properties
stdlib/: .classpath  .project  build.properties  build.sh
stylesheets/: stylesheet.css
test-workspace/: .project
update-site/: category.xml  copy-to-server-haskell.sh  copy-to-server.sh  index.html  site.xml
(+3803 files in other folders)
