name:                sugarhaskell
version:             0.1
cabal-version:       >= 1.6
build-type:          Custom
license:             GPL
author:              Sebastian Erdweg
maintainer:          seba at informatik uni-marburg de
homepage:            http://sugarj.org
bug-reports:         http://github.com/seba--/sugarj/issues
synopsis:            Library-based syntactic extensibility for Haskell
category:            Language, Code generation, Source-tools

data-dir:            lib

executable sugarhaskell
  main-is:       SugarHaskell.hs
  build-depends: base, process

source-repository head
  type:     git
  location: http://github.com/seba--/sugarj
  subdir:   compiler

